2012-0?-?? Getting Things GNOME! 0.3
    * Hide tasks with due date someday, #931376
    * New Date class by Paul Kishimoto and Izidor Matušov
    * Urgency Color plugin by Wolter Hellmund
    * Allow GTG to run from different locations than /usr/share or /usr/local/share
    * Removed module GTG.tools.openurl and replaced by python's webbrowser.open
    * Removed import_json plugin
    * Saved searches could have assigned color
    * Stopped links from opening when accidently letting go of mouse button while selecting them, #823339, by Steve Scheel
    * Search through DBus
    * GTCli handles error better
    * GTCli allows search through DBus
    * Small change to QuickAdd toolbar:
      * there is allowed whitespace after due: and others, i.e. "due: 2012-04-01" is parsed as a valid attribute
      * added start: which has the same meaning as defer:
    * Automatic restore a backup XML file if the original XML file could not be loaded
    * Backends were renamed to Synchronization Services, by Anant Gupta
    * Reimplement the tag context menu as a widget, in order to - hopefully - be able to implement an enhanced context menu with, for instance, a color picker.
    * Background Colors option was moved from View menu into preferences dialog
    * Reorganised notification area menu (New task, Show browser, <tasks>, Quit)

2012-02-13 Getting Things GNOME! 0.2.9
    * Big refractorization of code, now using liblarch
    * Extended backend system to support multiple backends by Luca Invernizzi
    * Backend GUI configuration by Luca Invernizzi
    * Backends:
       * Added Mantis Bug Tracker backend, by Alayn Gortazar
       * Added Tomboy/Gnote backend, by Luca Invernizzi
       * Added Launchpad backend, by Luca Invernizzi
       * Added Twitter/Identica backend, by Luca Invernizzi
    * Graphical crah handler, thanks to Acire and python-snippets
    * Command line tool based on DBus interface of GTG, by Bryce Harrington