@@ -1,6 +1,7 @@
 2012-0?-?? Getting Things GNOME! 0.3
     * Hide tasks with due date someday, #931376
     * New Date class by Paul Kishimoto and Izidor Matušov
+      * Parse due:3 as next 3rd day in month
     * Urgency Color plugin by Wolter Hellmund
     * Allow GTG to run from different locations than /usr/share or /usr/local/share
     * Removed module GTG.tools.openurl and replaced by python's webbrowser.open
